Add getMember and updateMember functions
